--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 .logo {
 	text-align: left;
+	text-decoration: white;
 }
 .links {
 	justify-content: center;
@@ -44,4 +45,5 @@ a {
 	justify-content: center;
 	text-align: center;
 	margin-top: 1rem;
+	text-decoration: white;
 }
