--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a {
 	justify-content: center;
 	text-align: center;
 	margin-top: 1rem;
-	color: white;
+	color: #e8e8e8;
 }
 h2 {
 	font-size: 2.15rem;
